--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ SWAGGER_PREFIX=/swagger
 LOG_LEVEL=silly
 PUBLIC_VAPID_KEY=BOMleG1d7bV_h31xE9tlSrcU1qtpT-UqVBguB9wGzOPiYmAqI-Y4uEKCjlwElO1PhKJTGl0aPwYMpnTHJJxOKw4
 PRIVATE_VAPID_KEY=dGTwhd_05TN5F2yVyEouwUJzTVpsiXRd_5-t_S3bY7k
+FACEBOOK_API_ID=801664360245917
+FACEBOOK_API_SECRET=4a99d27dd2655b97417a9ece6ce59a55
