--- a/package.json
+++ b/package.json
@@ -30,17 +30,22 @@
         "express-jwt": "^5.3.1",
         "express-static": "^1.2.6",
         "helmet": "^3.21.2",
+        "inversify": "^5.0.1",
+        "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.1.2",
         "web-push": "^3.4.2",
         "winston": "^3.2.1"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.6",
         "@types/express": "^4.17.2",
         "@types/hapi__joi": "^16.0.3",
         "@types/helmet": "0.0.45",
         "@types/jest": "^24.0.22",
         "@types/node": "^12.12.6",
         "@types/supertest": "^2.0.8",
+        "@types/swagger-ui-express": "^4.1.0",
+        "@types/web-push": "^3.3.0",
         "@typescript-eslint/eslint-plugin": "^2.6.1",
         "@typescript-eslint/parser": "^2.6.1",
         "eslint": "^6.6.0",
