--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
         "allowJs": true,
         "noEmit": false,
         "resolveJsonModule": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "noImplicitReturns": true,
+        "strict": true,
+        "noUnusedLocals": true
     },
     "include": ["./src/**/*"],
     "exclude": ["node_modules", "tests"]
