--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "helmet": "^3.21.2",
         "inversify": "^5.0.1",
         "reflect-metadata": "^0.1.13",
+        "socket.io": "^2.3.0",
         "swagger-ui-express": "^4.1.2",
         "web-push": "^3.4.2",
         "winston": "^3.2.1"
@@ -43,6 +44,7 @@
         "@types/helmet": "0.0.45",
         "@types/jest": "^24.0.22",
         "@types/node": "^12.12.6",
+        "@types/socket.io": "^2.1.4",
         "@types/supertest": "^2.0.8",
         "@types/swagger-ui-express": "^4.1.0",
         "@types/web-push": "^3.3.0",
